--- a/index.html
+++ b/index.html
@@ -11,11 +11,15 @@
                <img src="received_1887122388376547.jpeg" class="img-thumbnail" style="width:400px;height:500px;"/> <br>
                <button class="btn btn-primary" type="button" id="btnLike1"> Like </button>
                 <output id="countLikes1">0</output>
+                <button class="btn btn-primary" type="button" id="btnDislike1">👎Dislike</button>
+               <output id="countDislike1">0</output>
              </div>
              <div class="col-4">
                <img src="received_425983736875476.jpeg" class="img-thumbnail" style="width:400px;height:500px;"/> <br>
                <button class="btn btn-primary" type="button" id="btnLike2"> Like </button>
                 <output id="countLikes2">0</output>
+                <button class="btn btn-primary" type="button" id="btnDislike2">👎Dislike</button>
+               <output id="countDislike2">0</output>
              </div>
              <div class="col-4"> Comments<br>
 
