--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
        <div class="container">
           <div class="row">
              <div class="col-4">
-               <img src="IMG_20220109_235601.jpg" class="img-thumbnail" style="width:400px;height:500px;"/> <br>
+               <img src="received_1887122388376547.jpeg" class="img-thumbnail" style="width:400px;height:500px;"/> <br>
                <button class="btn btn-primary" type="button" id="btnLike1"> Like </button>
                 <output id="countLikes1">0</output>
                 <button class="btn btn-outline-danger" type="button" id="btnDislike1"> 👎🏻Dislike </button>
