--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 
              </div>
              <div class="col-4">
-               <img src="IMG_3009.JPG" class="img-thumbnail" style="width:400px;height:500px;"/> <br>
+               <img src="received_425983736875476.jpeg" class="img-thumbnail" style="width:400px;height:500px;"/> <br>
                <button class="btn btn-primary" type="button" id="btnLike2"> Like </button>
                 <output id="countLikes2">0</output>
                 <button class="btn btn-outline-danger" type="button" id="btnDislike2"> 👎🏻Dislike </button>
