--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
    </head>
    <body> 
-       <div class="row">
+       <div class="container">
+          <div class="row">
              <div class="col-4">
-               <img src="received_1887122388376547.jpeg" class="img-thumbnail" style="width:400px;height:500px;"/> <br>
+               <img src="received_425983736875476.jpeg" class="img-thumbnail" style="width:400px;height:500px;"/> <br>
                <button class="btn btn-primary" type="button" id="btnLike1"> Like </button>
                 <output id="countLikes1">0</output>
                 <button class="btn btn-outline-danger" type="button" id="btnDislike1"> 👎🏻Dislike </button>
         <output id="countDislikes1"> 0 </output>
                 
-              </div>
+             </div>
              <div class="col-4">
-               <img src="received_425983736875476.jpeg" class="img-thumbnail" style="width:400px;height:500px;"/> <br>
+               <img src="received_1887122388376547.jpeg" class="img-thumbnail" style="width:400px;height:500px;"/> <br>
                <button class="btn btn-primary" type="button" id="btnLike2"> Like </button>
                 <output id="countLikes2">0</output>
                 <button class="btn btn-outline-danger" type="button" id="btnDislike2"> 👎🏻Dislike </button>
@@ -29,7 +30,7 @@
 
 <button class="btn btn-success" id="submit">Submit</button>
 
-<textarea class="form-control" id="commentbox" rows="20"></textarea>
+<textarea class="form-control" id="commentbox" rows="24"></textarea>
 
                 </div>
              </div>
@@ -37,4 +38,3 @@
    
       <script src="index.js"> </script>
    </body>
-                                
